feat: Add EAS configuration and update Android manifest with version code and permissions.

--- a/app.json
+++ b/app.json
@@ -14,6 +14,12 @@
     },
     "android": {
       "package": "com.simplenotes.offline",
+      "versionCode": 1,
+      "permissions": [
+        "android.permission.INTERNET",
+        "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT"
+      ],
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
